--- a/output/404.md
+++ b/output/404.md
@@ -5,12 +5,12 @@ description : Hmm... that place doesn't seem to exist
 	<section id="error404" class="bringIn">        
         <header id="intro" class="text-center">
             <h1 class="text-font">
-                <span class="bigger"><span class="t1">4</span><span class="bracket">Oh</span><span class="t2">4</span><span class="bracket">!</span></span>
+                <span class=""><span class="t1">4</span><span class="bracket">Oh</span><span class="t2">4</span><span class="bracket">!</span></span>
             </h1>
             <hr>
-            <h1>Hmm...<br><small>This place doesn't<br>seem to exist.</small></h1>
+            <h2>Hmm...<br><small>This place doesn't<br>seem to exist.</small></h2>
             <hr>
-            <h3>Please return <a href="{{relativepath}}index.html">home.</a></h3>
+            <h3>Please go back or return <a href="{{relativepath}}index.html">home.</a></h3>
         </header>
         <p class="geometers">&Alpha;&Gamma;&Epsilon;&Omega;&Mu;&Epsilon;&Tau;&Rho;&Eta;&Tau;&Omicron;&Sigma; &Mu;&Eta;&Delta;&Epsilon;&Iota;&Sigma; &Epsilon;&Iota;&Sigma;&Iota;&Tau;&Omega;</p>
 	</section>
